[package]
name = "bevy_renet"
version = "0.0.5"
keywords = ["gamedev", "networking"]
description = "Bevy plugin for the renet crate: Server/Client network library for multiplayer games with authentication and connection management"
repository = "https://github.com/lucaspoffo/renet"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { path = "../../bevy", default-features = false }
renet = { path = "../renet", version = "0.0.9" }

[dev-dependencies]
serde = { version = "1.0", features = [ "derive" ] } 
bevy = { path = "../../bevy", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_pbr", "x11"] }
bevy_reflect = { path = "../../bevy/crates/bevy_reflect" }
bevy_ecs = { path = "../../bevy/crates/bevy_ecs" }
bevy_ecs_macros = { path = "../../bevy/crates/bevy_ecs/macros" }
bincode = "1.3.1"
