[package]
name = "demo_bevy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
bevy_rapier3d = { path = "../../bevy_rapier/bevy_rapier3d" }
bevy = { path = "../../bevy", default-features = false, features = ["bevy_core_pipeline", "bevy_asset", "bevy_render", "bevy_pbr", "x11"] }
bevy_renet = { path = "../bevy_renet" }
serde = { version = "1.0", features = [ "derive" ] }
bincode = "1.3.1"
bevy_egui = { path = "../../bevy_egui" }
renet_visualizer = { path = "../renet_visualizer" }
# TODO: when released, use new version with bevy 0.8
smooth-bevy-cameras = { path = "../../smooth-bevy-cameras" }

