[package]
name = "renet"
version = "0.0.9"
description = "Server/Client network library for multiplayer games with authentication and connection management"
keywords = ["gamedev", "networking"]
repository = "https://github.com/lucaspoffo/renet"
readme = "../README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rechannel = { path = "../rechannel", version = "0.0.5" }
renetcode = { path = "../renetcode", version = "0.0.5" }
bevy = { path = "../../bevy", default-features = false, features = ["bevy_asset", "bevy_scene"] }
bevy_reflect = { path = "../../bevy/crates/bevy_reflect" }
bevy_ecs = { path = "../../bevy/crates/bevy_ecs" }
bevy_ecs_macros = { path = "../../bevy/crates/bevy_ecs/macros" }
log = "0.4.11"
